--- a/index.html
+++ b/index.html
@@ -19,22 +19,53 @@
     <li><a href="#cal" class="item-menu item-menu-color">Calendário</a></li>
   </ul>
 </header>
-<section class="primary-section">
+<section class="primary-section flex-column-center">
   <div class="flex">
     <div class="flex-column primary-text-section">
       <h1 class="primary-title">Queremos transformar os profissionais de hoje</h1>
       <label class="primary-text">
-        A Voxus Academy acredita que o mais justo é que cada profissional tenha a oportunidade de se preparar para o futuro.
+        A Voxus Academy acredita que o mais justo é que cada profissional tenha a oportunidade de se preparar para o futuro.<br/>
         As melhores pessoas podem passar a ter as habilidades necessárias para orientar sua carreira com treinamentos online.
       </label>
     </div>
-    <img/>
+    <img class="dragon-logo" alt="Dragon Logo" src="./assets/img/dragon.svg"/>
   </div>
 </section>
-<section>
-  <p>
-    Teste
-  </p>
+<section class="second-section flex-column-center">
+  <div class="flex">
+    <img class="secondary-img" src="./assets/img/second-section.svg">
+    <div class="flex-column">
+      <h1 class="secondary-title">
+        Através de workshops e treinamentos passamos conhecimento.
+      </h1>
+      <label class="secondary-text">
+        A Voxus Academy acredita que o mais justo é que cada profissional tenha a oportunidade de se preparar para o futuro. <br/>
+        As melhores pessoas podem passar a ter as habilidades necessárias para orientar sua carreira com treinamentos online.
+      </label>
+    </div>
+  </div>
+
+</section>
+<section class="testimonials-section flex-column-center">
+  <div class="flex">
+    <img class="testimonials-icon" alt="Testimonial Icon" src="./assets/img/testimonial-icon.svg" />
+    <h1 class="testimonials-title">
+      Falando sobre a minha experiência no treinamento online
+    </h1>
+  </div>
+  <span class="testimonials-text">
+    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut aliquam purus sit amet luctus. Dui id ornare arcu odio ut sem.”
+  </span>
+  <div class="flex-center">
+    <img alt="Company Logo" class="company-testimonials-logo" src="./assets/img/company.png"/>
+    <img alt="Profile Image" class="profile-testimonials" src="./assets/img/profile.png">
+    <div class="flex-column-center profile-testimonials-section">
+      <h3 class="profile-testimonials-name">Rodolfo Ipsum</h3>
+      <span class="profile-testimonials-role">Analista da Verisure</span>
+    </div>
+  </div>
 </section>
 </body>
 <script type="text/javascript" src="main.js"></script>
