Adicionando Efeito de Full Screen Photo

--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@
 <section class="gallery-section flex-center justify-center">
   <div class="photo-gallery flex-column flex-wrap">
 
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01">
+    </div>
+
     <div class="flex-end photo-gallery-margin">
-      <img id="img-1" alt="Imagem 1" class="img-1 photo-gallery-img" src="assets/img/img-1.png" onclick="zoomImg('img-1')"/>
-      <img id="img-2" alt="Imagem 2" class="img-2 photo-gallery-img" src="assets/img/img-2.png" onclick="zoomImg('img-2')"/>
+      <img id="img-1" alt="Imagem 1" class="img-1 photo-gallery-img" src="assets/img/img1-full.jpg" onclick="zoomImg('img-1')"/>
+      <img id="img-2" alt="Imagem 2" class="img-2 photo-gallery-img" src="assets/img/img2-full.jpg" onclick="zoomImg('img-2')"/>
     </div>
     <div class="flex-start">
-      <img id="img-3" alt="Imagem 3" class="img-3 photo-gallery-img" src="assets/img/img-3.png" onclick="zoomImg('img-3')"/>
-      <img id="img-4" alt="Imagem 4" class="img-4 photo-gallery-img" src="assets/img/img-4.png" onclick="zoomImg('img-4')"/>
+      <img id="img-3" alt="Imagem 3" class="img-3 photo-gallery-img" src="assets/img/img3-full.jpg" onclick="zoomImg('img-3')"/>
+      <img id="img-4" alt="Imagem 4" class="img-4 photo-gallery-img" src="assets/img/img4-full.jpg" onclick="zoomImg('img-4')"/>
     </div>
   </div>
   <div class="gallery-text-section">
