Adicionando os bubbles na seção de calendário

--- a/index.html
+++ b/index.html
@@ -1,102 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles/reset.css">
-  <link rel="stylesheet" href="assets/styles/styles.css">
-  <title>Layout Voxus Academy</title>
-</head>
-<body class="flex-column-center">
-<header class="menu flex">
-  <img class="menulogo" alt="Logo Voxus Academy" src="./assets/img/voxus-logo.png"/>
-  <ul class="menu-list flex-center">
-    <li><a href="#sobre" class="item-menu menu-about item-menu-color">Sobre</a></li>
-    <li><a href="#fotos" class="item-menu menu-photo item-menu-color">Fotos</a></li>
-    <li><a href="#depo" class="item-menu menu-depo item-menu-color">Depoimentos</a></li>
-    <li><a href="#cal" class="item-menu menu-cal item-menu-color">Calendário</a></li>
-  </ul>
-</header>
-<section class="primary-section flex-column-center">
-  <div class="flex primary-flex">
-    <div class="flex-column primary-text-section">
-      <h1 class="primary-title">Queremos transformar os profissionais de hoje</h1>
-      <label class="primary-text">
-        A Voxus Academy acredita que o mais justo é que cada profissional tenha a oportunidade de se preparar para o futuro.<br/>
-        As melhores pessoas podem passar a ter as habilidades necessárias para orientar sua carreira com treinamentos online.
-      </label>
-    </div>
-    <img class="dragon-logo" alt="Dragon Logo" src="./assets/img/dragon.svg"/>
-  </div>
-</section>
-<section class="second-section flex-column-center">
-  <div class="flex">
-    <img class="secondary-img" src="./assets/img/second-section.svg">
-    <div class="flex-column second-text-section">
-      <h1 class="secondary-title">
-        Através de workshops e treinamentos passamos conhecimento
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/styles/reset.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+    <title>Layout Voxus Academy</title>
+  </head>
+  <body class="flex-column-center">
+    <header class="menu flex">
+      <img
+        class="menulogo"
+        alt="Logo Voxus Academy"
+        src="./assets/img/voxus-logo.png"
+      />
+      <ul class="menu-list flex-center">
+        <li>
+          <a href="#sobre" class="item-menu menu-about item-menu-color"
+            >Sobre</a
+          >
+        </li>
+        <li>
+          <a href="#fotos" class="item-menu menu-photo item-menu-color"
+            >Fotos</a
+          >
+        </li>
+        <li>
+          <a href="#depo" class="item-menu menu-depo item-menu-color"
+            >Depoimentos</a
+          >
+        </li>
+        <li>
+          <a href="#cal" class="item-menu menu-cal item-menu-color"
+            >Calendário</a
+          >
+        </li>
+      </ul>
+    </header>
+    <section class="primary-section flex-column-center">
+      <div class="flex primary-flex">
+        <div class="flex-column primary-text-section">
+          <h1 class="primary-title">
+            Queremos transformar os profissionais de hoje
+          </h1>
+          <label class="primary-text">
+            A Voxus Academy acredita que o mais justo é que cada profissional
+            tenha a oportunidade de se preparar para o futuro.<br />
+            As melhores pessoas podem passar a ter as habilidades necessárias
+            para orientar sua carreira com treinamentos online.
+          </label>
+        </div>
+        <img
+          class="dragon-logo"
+          alt="Dragon Logo"
+          src="./assets/img/dragon.svg"
+        />
+      </div>
+    </section>
+    <section class="second-section flex-column-center">
+      <div class="flex">
+        <img class="secondary-img" src="./assets/img/second-section.svg" />
+        <div class="flex-column second-text-section">
+          <h1 class="secondary-title">
+            Através de workshops e treinamentos passamos conhecimento
+          </h1>
+          <label class="secondary-text">
+            A Voxus Academy acredita que o mais justo é que cada profissional
+            tenha a oportunidade de se preparar para o futuro. <br />
+            As melhores pessoas podem passar a ter as habilidades necessárias
+            para orientar sua carreira com treinamentos online.
+          </label>
+        </div>
+      </div>
+    </section>
+    <section class="testimonials-section flex-column-center">
+      <div class="flex">
+        <img
+          class="testimonials-icon"
+          alt="Testimonial Icon"
+          src="./assets/img/testimonial-icon.svg"
+        />
+        <h1 class="testimonials-title">
+          Falando sobre a minha experiência no treinamento online
+        </h1>
+      </div>
+      <span class="testimonials-text">
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut aliquam purus sit
+        amet luctus. Dui id ornare arcu odio ut sem.”
+      </span>
+      <div class="flex-center">
+        <img
+          alt="Company Logo"
+          class="company-testimonials-logo"
+          src="./assets/img/company.png"
+        />
+        <img
+          alt="Profile Image"
+          class="profile-testimonials"
+          src="./assets/img/profile.png"
+        />
+        <div class="flex-column-center profile-testimonials-section">
+          <h3 class="profile-testimonials-name">Rodolfo Ipsum</h3>
+          <span class="profile-testimonials-role">Analista da Verisure</span>
+        </div>
+      </div>
+    </section>
+    <img class="gray-bg" alt="Gray Background" src="assets/img/bg-gray.svg" />
+    <section class="gallery-section flex-center justify-center">
+      <div class="photo-gallery flex-column flex-wrap">
+        <div id="myModal" class="modal">
+          <span class="close">&times;</span>
+          <img class="modal-content" id="img01" />
+        </div>
+
+        <div class="flex-end photo-gallery-margin">
+          <img
+            id="img-1"
+            alt="Imagem 1"
+            class="img-1 photo-gallery-img"
+            src="assets/img/img1-full.jpg"
+            onclick="zoomImg('img-1')"
+          />
+          <img
+            id="img-2"
+            alt="Imagem 2"
+            class="img-2 photo-gallery-img"
+            src="assets/img/img2-full.jpg"
+            onclick="zoomImg('img-2')"
+          />
+        </div>
+        <div class="flex-start">
+          <img
+            id="img-3"
+            alt="Imagem 3"
+            class="img-3 photo-gallery-img"
+            src="assets/img/img3-full.jpg"
+            onclick="zoomImg('img-3')"
+          />
+          <img
+            id="img-4"
+            alt="Imagem 4"
+            class="img-4 photo-gallery-img"
+            src="assets/img/img4-full.jpg"
+            onclick="zoomImg('img-4')"
+          />
+        </div>
+      </div>
+      <div class="gallery-text-section">
+        <h1 class="gallery-title">
+          Acreditamos em treinamentos com desenvolvimento
+        </h1>
+        <span class="gallery-text">
+          A Voxus Academy acredita que o mais justo é que cada profissional
+          tenha a oportunidade de se preparar para o futuro. As melhores pessoas
+          podem passar a ter as habilidades necessárias para orientar sua
+          carreira.
+        </span>
+      </div>
+    </section>
+    <section class="company-depo-section flex">
+      <div class="company-depo-slider-section">
+        <div class="company-depo-slider flex-center">
+          <img alt="Logo Sage" class="logo-sage" src="/assets/img/Sage.png" />
+          <img alt="Logo Ogilvy" class="logo-ogilvy" src="/assets/img/Ogilvy.png" />
+          <img alt="Logo Amaro" class="logo-amaro" src="/assets/img/Amaro.png" />
+        </div>
+        <div class="company-caption-section flex">
+          <span class="testimonials company-caption-text">
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Auctor urna nunc id cursus metus aliquam eleifend.”
+          </span>
+          <img class="testimonials-bg" alt="Testimonials Background Icon" src="/assets/img/testimonials-bg.svg"/>
+          
+        </div>
+        <div class="flex-center company-depo-profile-section">
+          <img alt="Company depoiment Profile Image" class="company-depo-profile-img" src="/assets/img/company-profile.png" />
+          <div class="flex-column">
+            <span class="company-depo-name">Denise Silva</span>
+            <span class="company-depo-company-name">Sage</span>
+          </div>
+        </div>
+      </div>
+      <img alt="Grupo de Logos" src="/assets/img/logo-group.png" />
+    </section>
+    <section class="calendar-section flex-column-center">
+      <h1 class="calendar-title">Calendário</h1>
+      <div class="calendar-card">
+        <img alt="SC 2019 Conferência E-commerce Brasil" src="/assets/img/SC-2019-Logo.png" class="calendar-logo"/>
+        <div class="calendar-text-section">
+          <h2 class="calendar-info-title">SC2019 - Conferência E-commerce Brasil</h2>
+          <h6 class="calendar-info-date">Fevereiro 13-15 | Florianópolis, SC</h6>
+          <div class="flex-center">
+            <img class="ticket-logo" alt="Ticket Logo" src="/assets/img/ticket-logo.svg"/>
+            <h3 class="ticket-title">Apenas para convidados</h3>
+          </div>
+          <h6 class="ticket-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h6>
+        </div>
+      </div>
+    </section>
+    <img class="bubbles" alt="Background Yellow Bubbles" src="/assets/img/bubbles.svg"/>
+    <img class="bg-yellow" alt="Background Yellow Bubbles" src="/assets/img/yellow-bubbles.svg"/>
+    <section class="events-section flex-column-center">
+      <h1 class="special-title events-title">
+        Nosso objetivo é levar essa experiência para o Brasil inteiro
       </h1>
-      <label class="secondary-text">
-        A Voxus Academy acredita que o mais justo é que cada profissional tenha a oportunidade de se preparar para o futuro. <br/>
-        As melhores pessoas podem passar a ter as habilidades necessárias para orientar sua carreira com treinamentos online.
-      </label>
-    </div>
-  </div>
-
-</section>
-<section class="testimonials-section flex-column-center">
-  <div class="flex">
-    <img class="testimonials-icon" alt="Testimonial Icon" src="./assets/img/testimonial-icon.svg" />
-    <h1 class="testimonials-title">
-      Falando sobre a minha experiência no treinamento online
-    </h1>
-  </div>
-  <span class="testimonials-text">
-    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut aliquam purus sit amet luctus. Dui id ornare arcu odio ut sem.”
-  </span>
-  <div class="flex-center">
-    <img alt="Company Logo" class="company-testimonials-logo" src="./assets/img/company.png"/>
-    <img alt="Profile Image" class="profile-testimonials" src="./assets/img/profile.png">
-    <div class="flex-column-center profile-testimonials-section">
-      <h3 class="profile-testimonials-name">Rodolfo Ipsum</h3>
-      <span class="profile-testimonials-role">Analista da Verisure</span>
-    </div>
-  </div>
-</section>
-<img class="gray-bg" alt="Gray Background" src="assets/img/bg-gray.svg"/>
-<section class="gallery-section flex-center justify-center">
-  <div class="photo-gallery flex-column flex-wrap">
-
-    <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img01">
-    </div>
-
-    <div class="flex-end photo-gallery-margin">
-      <img id="img-1" alt="Imagem 1" class="img-1 photo-gallery-img" src="assets/img/img1-full.jpg" onclick="zoomImg('img-1')"/>
-      <img id="img-2" alt="Imagem 2" class="img-2 photo-gallery-img" src="assets/img/img2-full.jpg" onclick="zoomImg('img-2')"/>
-    </div>
-    <div class="flex-start">
-      <img id="img-3" alt="Imagem 3" class="img-3 photo-gallery-img" src="assets/img/img3-full.jpg" onclick="zoomImg('img-3')"/>
-      <img id="img-4" alt="Imagem 4" class="img-4 photo-gallery-img" src="assets/img/img4-full.jpg" onclick="zoomImg('img-4')"/>
-    </div>
-  </div>
-  <div class="gallery-text-section">
-    <h1 class="gallery-title">
-      Acreditamos em treinamentos com desenvolvimento
-    </h1>
-    <span class="gallery-text">
-      A Voxus Academy acredita que o mais justo é que cada
-      profissional tenha a oportunidade de se preparar para o futuro.
-      As melhores pessoas podem passar a ter as habilidades necessárias
-      para orientar sua carreira.
-    </span>
-  </div>
-</section>
-</body>
-<script type="text/javascript" src="main.js"></script>
+      <div class="flex-center">
+        <div class="city-section flex-column-center ctb-city">
+          <h2 class="city-title">Curitiba - PR</h2>
+          <h6 class="city-date">2019</h6>
+        </div>
+        <div class="city-section flex-column-center sp-city">
+          <h2 class="city-title">São Paulo - SP</h2>
+          <h6 class="city-date">2019</h6>
+        </div>
+        <div class="city-section flex-column-center go-city">
+          <h2 class="city-title">Goiânia - GO</h2>
+          <h6 class="city-date">2019</h6>
+        </div>
+      </div>
+    </section>
+    <footer class="flex-column-center">
+      <div class="flex">
+        <div class="footer-info-section flex-column">
+          <img alt="Logo Footer" src="/assets/img/logo-footer.png"/>
+          <h6 class="footer-info-text">Voxus Academy é uma iniciativa gratuita com treinamentos onlines e presenciais sobre mídia e mercado de propaganda.</h6>
+        </div>
+        <ul class="academy-footer-list">
+          <li class="list-title">Academy</li>
+          <li class="list-tags">Ajuda</li>
+          <li class="list-tags">Política de privacidade</li>
+          <li class="list-tags">Termos de uso</li>
+        </ul>
+        <ul class="about-footer-list">
+          <li class="list-title">Voxus</li>
+          <li class="list-tags">Sobre</li>
+          <li class="list-tags">Teste programática</li>
+        </ul>
+        <ul class="contact-footer-list">
+          <li class="list-title">Contato</li>
+          <li class="list-tags">admin@voxus.tv</li>
+          <li class="list-tags address">Rua Cincinato Braga, 340 - Andar 152 São Paulo, SP</li>
+          <li><img alt="Instagram Logo" class="insta-logo" src="/assets/img/insta.svg" /></li>
+        </ul>
+      </div>
+      <div class="copyright-section flex-center">
+        <h6 class="copyright-text">
+          © 2019, Voxus. Todos os direitos reservados.
+        </h6>
+        <h6 class="copyright-thanks">Oferecimento:</h6>
+        <img alt="Voxus Footer Logo" class="logo-footer-gray" src="/assets/img/voxus_grey.png"/>
+        <img alt="E-commerce Brasil Logo" class="ecbr-logo" src="/assets/img/logo-ecbr.png" />
+      </div>
+    </footer>
+  </body>
+  <script type="text/javascript" src="main.js"></script>
 </html>
