Alinhar em pixel perfect.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </li>
       </ul>
     </header>
+    <img class="bg-blue" alt="Blue Background" src="/assets/img/bg-blue.svg"/>
     <section class="primary-section flex-column-center">
       <div class="flex primary-flex">
         <div class="flex-column primary-text-section">
@@ -86,7 +87,7 @@
           src="./assets/img/testimonial-icon.svg"
         />
         <h1 class="testimonials-title">
-          Falando sobre a minha experiência no treinamento online
+          Falando sobre a minha <br/> experiência no treinamento online
         </h1>
       </div>
       <span class="testimonials-text">
@@ -94,7 +95,7 @@
         tempor incididunt ut labore et dolore magna aliqua. Ut aliquam purus sit
         amet luctus. Dui id ornare arcu odio ut sem.”
       </span>
-      <div class="flex-center">
+      <div class="flex-center company-testimonials-section">
         <img
           alt="Company Logo"
           class="company-testimonials-logo"
@@ -112,7 +113,7 @@
       </div>
     </section>
     <img class="gray-bg" alt="Gray Background" src="assets/img/bg-gray.svg" />
-    <section class="gallery-section flex-center justify-center">
+    <section class="gallery-section flex justify-center">
       <div class="photo-gallery flex-column flex-wrap">
         <div id="myModal" class="modal">
           <span class="close">&times;</span>
@@ -186,7 +187,7 @@
           </div>
         </div>
       </div>
-      <img alt="Grupo de Logos" src="/assets/img/logo-group.png" />
+      <img alt="Grupo de Logos" src="/assets/img/logo-group.png" class="logo-group"/>
     </section>
     <section class="calendar-section flex-column-center">
       <h1 class="calendar-title">Calendário</h1>
@@ -209,7 +210,7 @@
       <h1 class="special-title events-title">
         Nosso objetivo é levar essa experiência para o Brasil inteiro
       </h1>
-      <div class="flex-center">
+      <div class="flex-center city-group">
         <div class="city-section flex-column-center ctb-city">
           <h2 class="city-title">Curitiba - PR</h2>
           <h6 class="city-date">2019</h6>
@@ -225,7 +226,7 @@
       </div>
     </section>
     <footer class="flex-column-center">
-      <div class="flex">
+      <div class="flex footer-width">
         <div class="footer-info-section flex-column">
           <img alt="Logo Footer" src="/assets/img/logo-footer.png"/>
           <h6 class="footer-info-text">Voxus Academy é uma iniciativa gratuita com treinamentos onlines e presenciais sobre mídia e mercado de propaganda.</h6>
@@ -248,7 +249,7 @@
           <li><img alt="Instagram Logo" class="insta-logo" src="/assets/img/insta.svg" /></li>
         </ul>
       </div>
-      <div class="copyright-section flex-center">
+      <div class="copyright-section footer-width flex-center">
         <h6 class="copyright-text">
           © 2019, Voxus. Todos os direitos reservados.
         </h6>
