Adicionando Responsivo 768px

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="assets/styles/reset.css" />
     <link rel="stylesheet" href="assets/styles/styles.css" />
+    <link rel="stylesheet" href="assets/styles/media.css" />
     <title>Layout Voxus Academy</title>
   </head>
   <body class="flex-column-center">
@@ -42,7 +43,7 @@
         </li>
       </ul>
     </header>
-    <img class="bg-blue" alt="Blue Background" src="/assets/img/bg-blue.svg"/>
+    <img class="bg-blue" alt="Blue Background" src="/assets/img/bg-blue.svg" />
     <section class="primary-section flex-column-center">
       <div class="flex primary-flex">
         <div class="flex-column primary-text-section">
@@ -87,7 +88,8 @@
           src="./assets/img/testimonial-icon.svg"
         />
         <h1 class="testimonials-title">
-          Falando sobre a minha <br/> experiência no treinamento online
+          Falando sobre a minha <br />
+          experiência no treinamento online
         </h1>
       </div>
       <span class="testimonials-text">
@@ -169,43 +171,89 @@
       <div class="company-depo-slider-section">
         <div class="company-depo-slider flex-center">
           <img alt="Logo Sage" class="logo-sage" src="/assets/img/Sage.png" />
-          <img alt="Logo Ogilvy" class="logo-ogilvy" src="/assets/img/Ogilvy.png" />
-          <img alt="Logo Amaro" class="logo-amaro" src="/assets/img/Amaro.png" />
+          <img
+            alt="Logo Ogilvy"
+            class="logo-ogilvy"
+            src="/assets/img/Ogilvy.png"
+          />
+          <img
+            alt="Logo Amaro"
+            class="logo-amaro"
+            src="/assets/img/Amaro.png"
+          />
         </div>
         <div class="company-caption-section flex">
           <span class="testimonials company-caption-text">
-            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Auctor urna nunc id cursus metus aliquam eleifend.”
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Auctor
+            urna nunc id cursus metus aliquam eleifend.”
           </span>
-          <img class="testimonials-bg" alt="Testimonials Background Icon" src="/assets/img/testimonials-bg.svg"/>
-          
+          <img
+            class="testimonials-bg"
+            alt="Testimonials Background Icon"
+            src="/assets/img/testimonials-bg.svg"
+          />
         </div>
         <div class="flex-center company-depo-profile-section">
-          <img alt="Company depoiment Profile Image" class="company-depo-profile-img" src="/assets/img/company-profile.png" />
+          <img
+            alt="Company depoiment Profile Image"
+            class="company-depo-profile-img"
+            src="/assets/img/company-profile.png"
+          />
           <div class="flex-column">
             <span class="company-depo-name">Denise Silva</span>
             <span class="company-depo-company-name">Sage</span>
           </div>
         </div>
       </div>
-      <img alt="Grupo de Logos" src="/assets/img/logo-group.png" class="logo-group"/>
+      <img
+        alt="Grupo de Logos"
+        src="/assets/img/logo-group.png"
+        class="logo-group"
+      />
     </section>
     <section class="calendar-section flex-column-center">
       <h1 class="calendar-title">Calendário</h1>
       <div class="calendar-card">
-        <img alt="SC 2019 Conferência E-commerce Brasil" src="/assets/img/SC-2019-Logo.png" class="calendar-logo"/>
+        <img
+          alt="SC 2019 Conferência E-commerce Brasil"
+          src="/assets/img/SC-2019-Logo.png"
+          class="calendar-logo"
+        />
         <div class="calendar-text-section">
-          <h2 class="calendar-info-title">SC2019 - Conferência E-commerce Brasil</h2>
-          <h6 class="calendar-info-date">Fevereiro 13-15 | Florianópolis, SC</h6>
+          <h2 class="calendar-info-title">
+            SC2019 - Conferência E-commerce Brasil
+          </h2>
+          <h6 class="calendar-info-date">
+            Fevereiro 13-15 | Florianópolis, SC
+          </h6>
           <div class="flex-center">
-            <img class="ticket-logo" alt="Ticket Logo" src="/assets/img/ticket-logo.svg"/>
+            <img
+              class="ticket-logo"
+              alt="Ticket Logo"
+              src="/assets/img/ticket-logo.svg"
+            />
             <h3 class="ticket-title">Apenas para convidados</h3>
           </div>
-          <h6 class="ticket-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h6>
+          <h6 class="ticket-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </h6>
         </div>
       </div>
     </section>
-    <img class="bubbles" alt="Background Yellow Bubbles" src="/assets/img/bubbles.svg"/>
-    <img class="bg-yellow" alt="Background Yellow Bubbles" src="/assets/img/yellow-bubbles.svg"/>
+    <img
+      class="bubbles"
+      alt="Background Yellow Bubbles"
+      src="/assets/img/bubbles.svg"
+    />
+    <img
+      class="bg-yellow"
+      alt="Background Yellow Bubbles"
+      src="/assets/img/yellow-bubbles.svg"
+    />
     <section class="events-section flex-column-center">
       <h1 class="special-title events-title">
         Nosso objetivo é levar essa experiência para o Brasil inteiro
@@ -228,8 +276,11 @@
     <footer class="flex-column-center">
       <div class="flex footer-width">
         <div class="footer-info-section flex-column">
-          <img alt="Logo Footer" src="/assets/img/logo-footer.png"/>
-          <h6 class="footer-info-text">Voxus Academy é uma iniciativa gratuita com treinamentos onlines e presenciais sobre mídia e mercado de propaganda.</h6>
+          <img alt="Logo Footer" src="/assets/img/logo-footer.png" />
+          <h6 class="footer-info-text">
+            Voxus Academy é uma iniciativa gratuita com treinamentos onlines e
+            presenciais sobre mídia e mercado de propaganda.
+          </h6>
         </div>
         <ul class="academy-footer-list">
           <li class="list-title">Academy</li>
@@ -245,8 +296,16 @@
         <ul class="contact-footer-list">
           <li class="list-title">Contato</li>
           <li class="list-tags">admin@voxus.tv</li>
-          <li class="list-tags address">Rua Cincinato Braga, 340 - Andar 152 São Paulo, SP</li>
-          <li><img alt="Instagram Logo" class="insta-logo" src="/assets/img/insta.svg" /></li>
+          <li class="list-tags address">
+            Rua Cincinato Braga, 340 - Andar 152 São Paulo, SP
+          </li>
+          <li>
+            <img
+              alt="Instagram Logo"
+              class="insta-logo"
+              src="/assets/img/insta.svg"
+            />
+          </li>
         </ul>
       </div>
       <div class="copyright-section footer-width flex-center">
@@ -254,8 +313,16 @@
           © 2019, Voxus. Todos os direitos reservados.
         </h6>
         <h6 class="copyright-thanks">Oferecimento:</h6>
-        <img alt="Voxus Footer Logo" class="logo-footer-gray" src="/assets/img/voxus_grey.png"/>
-        <img alt="E-commerce Brasil Logo" class="ecbr-logo" src="/assets/img/logo-ecbr.png" />
+        <img
+          alt="Voxus Footer Logo"
+          class="logo-footer-gray"
+          src="/assets/img/voxus_grey.png"
+        />
+        <img
+          alt="E-commerce Brasil Logo"
+          class="ecbr-logo"
+          src="/assets/img/logo-ecbr.png"
+        />
       </div>
     </footer>
   </body>
