Adicionando close button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="menu-mobile flex-center justify-center">
       <img class="logo-mobile" alt="Voxus Academy Logo" src="/assets/img/academy-logo.png"/>
       <img class="dropdown" alt="Dropdown icon" src="/assets/img/dropdown.png" onclick="dropDown()"/>
+      <img id="close-drop" class="close-drop hide" alt="Close icon" src="/assets/img/close.png" onclick="dropDown()"/>
     </div>
     <nav>
       <div id="drop-down" class="drop-down closed flex-column-center">
